--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase": "^12.6.0",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5"
   }
