--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
+    "mime": "^4.1.0",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5"
   }
